第二段落上傳

--- a/Example02/Example02.csproj
+++ b/Example02/Example02.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StoreLibary\StoreLibary.csproj">
+      <Project>{6f5f2ec0-4d64-48fc-9779-ba81b85febf5}</Project>
+      <Name>StoreLibary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
