--- a/Example01/Example01.csproj
+++ b/Example01/Example01.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CS280-Lecture1-Examples">
+      <HintPath>..\oDll\CS280-Lecture1-Examples.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
